--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<%= image_tag('photo.jpg', alt: 'Arnaud Levy', class: 'photo') %>
+---
+title: Arnaud Levy
+layout: default
+---
+<img src="/assets/images/photo.jpg" alt="Arnaud Levy" class="photo">
 <h1>Arnaud Levy</h1>
 <h2>À la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
