--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@ layout: default
 <h1>Arnaud Levy</h1>
 <h2>À la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
+  Co-fondateur de la coopérative <a href="https://www.noesya.coop" target="_blank" rel="noreferrer">noesya</a>.
   Entrepreneur depuis 2003 (digitalisation des marques de luxe).
   Maître de conférences associé en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et approche par compétences).
-  Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et Javascript).
+  Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et&nbsp;Javascript).
 </p>
 <ul class="follow">
   <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank" rel="noopener">LinkedIn</a></li>
