--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Arnaud Levy
 layout: default
 ---
-<img src="/assets/images/photo.jpg" alt="Arnaud Levy" class="photo">
+<img src="/assets/images/photo.jpg" alt="Arnaud Levy" class="photo" width="664" height="664">
 <h1>Arnaud Levy</h1>
 <h2>À la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
