--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@ layout: default
   <li><a href="http://www.behance.net/arnaudlevy" target="_blank" rel="noopener">Behance</a></li>
   <li><a href="https://directory.opquast.com/fr/certificat/A5MFPJ/" target="_blank" rel="noopener">Opquast</a></li>
 </ul>
+
+<p class="legal"><a href="/legal">Mentions légales</a></p>
