--- a/legal.html
+++ b/legal.html
@@ -8,5 +8,8 @@ layout: default
 </h2>
 
 <p>
-  Site édité par Arnaud Levy, 37 rue Orfila 75020 Paris. Mail: contact@arnaudlevy.com. Hébergement Netlify.
+  Site édité par Arnaud Levy<br>
+  37 rue Orfila 75020 Paris<br>
+  contact@arnaudlevy.com<br>
+  Hébergement Netlify
 </p>
