--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: default
 <h1>Arnaud Levy</h1>
 <h2>À la croisée de l'éthique, du&nbsp;code &&nbsp;de&nbsp;l'esthétique</h2>
 <p>
-  Co-fondateur de la coopérative <a href="https://www.noesya.coop" target="_blank" rel="noreferrer">noesya</a>.
-  Entrepreneur depuis 2003 (digitalisation des marques de luxe).
-  Maître de conférences associé en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et approche par compétences).
+  Co-fondateur de la coopérative <a href="https://www.noesya.coop" target="_blank" rel="noreferrer">noesya</a>, qui développe des communs numériques.
+  Entrepreneur depuis 2003.
+  Maître de conférences associé en design et technologie de l'information, expert en innovation pédagogique (classe inversée, tech for good, pédagogie par projet et approche par compétences).
   Développeur depuis 1999 (hier PHP, ActionScript et Objective-C&nbsp;; aujourd'hui Ruby on Rails et&nbsp;Javascript).
 </p>
 <ul class="follow">
@@ -22,6 +22,6 @@ layout: default
   <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank" rel="noopener">Coursera</a></li>
   <li><a href="http://www.behance.net/arnaudlevy" target="_blank" rel="noopener">Behance</a></li>
   <li><a href="https://directory.opquast.com/fr/certificat/A5MFPJ/" target="_blank" rel="noopener">Opquast</a></li>
+  <li><a href="https://mica.u-bordeaux-montaigne.fr/levy-arnaud/" target="_blank" rel="noopener">Laboratoire MICA</a></li>
 </ul>
-
 <p class="legal"><a href="/legal">Mentions légales</a></p>
