--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ layout: default
 <ul class="follow">
   <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank" rel="noopener">LinkedIn</a></li>
   <li><a href="https://github.com/arnaudlevy" target="_blank" rel="noopener">Github</a></li>
-  <li><a href="https://medium.com/arnaudlevy" target="_blank" rel="noopener">Medium</a></li>
+  <li><a href="https://medium.com/arnaudlevy" target="_blank" rel="noopener"><strike>Medium</strike></a></li>
+  <li><a href="https://publications.arnaudlevy.com" target="_blank" rel="noopener">Publications</a></li>
   <li><a href="http://www.facebook.com/arnaudlevy" target="_blank" rel="noopener">Facebook</a></li>
   <li><a href="http://twitter.com/arnaudlevy" target="_blank" rel="noopener">Twitter</a></li>
   <li><a href="http://pinterest.com/arnaudlevy/" target="_blank" rel="noopener">Pinterest</a></li>
