--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
   <li><a href="https://publications.arnaudlevy.com" target="_blank" rel="noopener">Publications</a></li>
   <li><a href="http://www.facebook.com/arnaudlevy" target="_blank" rel="noopener">Facebook</a></li>
   <li><a href="http://twitter.com/arnaudlevy" target="_blank" rel="noopener">Twitter</a></li>
+  <li><a href="https://mastodon.social/@arnaudlevy" target="_blank" rel="noopener">Mastodon</a></li>
   <li><a href="http://pinterest.com/arnaudlevy/" target="_blank" rel="noopener">Pinterest</a></li>
   <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank" rel="noopener">Pluralsight</a></li>
   <li><a href="https://www.coursera.org/user/7df126eb4709697297f8a811886462de" target="_blank" rel="noopener">Coursera</a></li>
