--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@ layout: default
   <li><a href="http://www.behance.net/arnaudlevy" target="_blank" rel="noopener">Behance</a></li>
   <li><a href="https://directory.opquast.com/fr/certificat/A5MFPJ/" target="_blank" rel="noopener">Opquast</a></li>
   <li><a href="https://mica.u-bordeaux-montaigne.fr/levy-arnaud/" target="_blank" rel="noopener">Laboratoire MICA</a></li>
+  <li><a href="https://cv.hal.science/arnaudlevy" target="_blank" rel="noopener">HAL</a></li>
 </ul>
 <p class="legal"><a href="/legal">Mentions légales</a></p>
