--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@ layout: default
 <ul class="follow">
   <li><a href="http://www.linkedin.com/in/arnaudlevy" target="_blank" rel="noopener">LinkedIn</a></li>
   <li><a href="https://github.com/arnaudlevy" target="_blank" rel="noopener">Github</a></li>
-  <li><a href="https://medium.com/arnaudlevy" target="_blank" rel="noopener"><strike>Medium</strike></a></li>
   <li><a href="https://publications.arnaudlevy.com" target="_blank" rel="noopener">Publications</a></li>
   <li><a href="http://www.facebook.com/arnaudlevy" target="_blank" rel="noopener">Facebook</a></li>
-  <li><a href="http://twitter.com/arnaudlevy" target="_blank" rel="noopener">Twitter</a></li>
   <li><a href="https://mastodon.social/@arnaudlevy" target="_blank" rel="noopener">Mastodon</a></li>
   <li><a href="http://pinterest.com/arnaudlevy/" target="_blank" rel="noopener">Pinterest</a></li>
   <li><a href="https://app.pluralsight.com/profile/arnaudlevy" target="_blank" rel="noopener">Pluralsight</a></li>
@@ -26,5 +24,9 @@ layout: default
   <li><a href="https://directory.opquast.com/fr/certificat/A5MFPJ/" target="_blank" rel="noopener">Opquast</a></li>
   <li><a href="https://mica.u-bordeaux-montaigne.fr/levy-arnaud/" target="_blank" rel="noopener">Laboratoire MICA</a></li>
   <li><a href="https://cv.hal.science/arnaudlevy" target="_blank" rel="noopener">HAL</a></li>
+</ul>
+<ul class="follow">
+  <li><a href="https://medium.com/arnaudlevy" target="_blank" rel="noopener"><strike>Medium</strike></a></li>
+  <li><a href="http://twitter.com/arnaudlevy" target="_blank" rel="noopener"><strike>Twitter</strike></a></li>
 </ul>
 <p class="legal"><a href="/legal">Mentions légales</a></p>
